Fix alerts' balance inputs having a scrollbar (fix #1269)

--- a/client/components/settings/emails/alerts.css
+++ b/client/components/settings/emails/alerts.css
@@ -46,12 +46,10 @@ table.alerts-and-reports td.condition span {
 .balance-inputs {
     display: flex;
     align-items: self-start;
+    gap: 0.5em;
 }
 
 .balance-inputs > * {
-    flex: 1;
-}
-
-.balance-inputs .input-with-addon {
-    margin-left: 0.5em;
+    flex-grow: 1;
+    flex-shrink: 0;
 }
